# HM-compress

./: .gitignore  CMakeLists.txt  README.md
examples/: free_monoid_segmentation_demo.cpp  place_notation_demo.cpp  theorem1_expansion_curve.cpp  waring_expansion_demo.cpp
include/: compression_math.hpp
include/compression_math/: core.hpp  expansion.hpp  free_abelian.hpp  free_monoid.hpp  macros.hpp
include/expansion/: coin_dp.hpp  expansion_function.hpp  segmentation_dp.hpp
include/macros/: macro_set.hpp
include/monoid/: free_abelian_monoid.hpp  free_monoid.hpp
include/statistics/: linear_regression.hpp
include/utils/: bigint.hpp  types.hpp
src/: main.cpp
src/expansion/: coin_dp.cpp  expansion_function.cpp  segmentation_dp.cpp
src/macros/: macro_set.cpp
src/monoid/: free_abelian_monoid.cpp  free_monoid.cpp
src/statistics/: linear_regression.cpp
src/utils/: bigint.cpp
tests/: test_bigint.cpp  test_coin_dp.cpp  test_expansion.cpp  test_expansion_theorems.cpp  test_free_abelian_monoid.cpp  test_free_monoid.cpp  test_linear_regression.cpp  test_macro_set.cpp  test_segmentation_dp.cpp
